# MEDYS-G

./: Makefile.am  README.md  input_test4tung  test4tung.compile
f2py_exemple/: compile.bash  test.py
input/H2/H2_2D/: LOG2  errors.txt  fort.100  fort.150  fort.151  fort.152  fort.99  graph.py  input
input/H2/H2_2D/BASIS/H2_R_1_40/1/: geom
input/H2/H2_2D/BASIS/H2_R_1_40/1/WORK/: control.run  mcdrtky  mocoef  nocoef_mc.lumorb
input/H2/H2_2D/E0/: input
input/H2/H2_2D/E0.0016/: LOG  errors.txt
input/H2/H2_2D/E0.16/BASIS/H2_R_1_40/1/: LOG
input/H2/H2_2D/E0.16/BASIS/H2_R_1_40/1/WORK/: mcvfl.1  trda1s  unikls
input/H2/H2_2D/E0.16/pdt_10/: launch.bash
input/H2/H2_2D/E0.16/pdt_5/: LOG  input
input/H2/H2_2D/E0/BASIS/H2_R_1_40/1/WORK/: mcd1fl  mcd2fl  mcscfls  mocoef_mc.lumorb
input_exemple/CO2/800nm_I5E13_NX_200_1MO_2e_pdt_100_nper2/: LOG  analyse.ipynb  analyse.py  graham.submit  input
input_exemple/CO2/pdt_100_nper_2/11_MO/: Analyse.ipynb  LOG  input  submit.11_MO
input_exemple/H2/H2_2D/E0/: LOG
input_exemple/H2/H2_2D/E0.0016/: input
input_exemple/H2/H2_2D/E0.16/pdt_10/: LOG
input_exemple/H2/H2_2D/E0.16/pdt_10/BASIS/H2_R_1_40/1/: DEBUG
input_exemple/H2/H2_2D/E0.16/pdt_5/: LOG  launch.bash  warning.txt
input_exemple/H2/H2_2D/E0/BASIS/H2_R_1_40/1/: aoints2  argosin  argosls.sp  colinp.debug  iargosky  makmcky  runc.error
src/all_v001/: champ1.f90  dynamique.f90  dynamique_extract.f90  dynamique_new.f90  dynamique_new_f2py.f90  read_columbus.f90  read_input.f90  test_4tung.f90  variables.f90
src/main/: main.f90
(+18 files in other folders)
